refactor: order of class of sidebar

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -35,49 +35,52 @@
                 </button>
             </div>
             <ul class="my-3">
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#usage">Get started!</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#alert">Alert</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#avatar">Avatar</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#badge">Badge</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#button">Button</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#card">Card</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#grid">Grid</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#image">Image</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#input">Input</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#lists">Lists</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#modal">Modal</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#navigation">Navigation</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
+                    <a href="#rating">Rating</a>
+                </li>
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#slider">Slider</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#toast">Toast</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item">
+                <li class="list-item py-1 px-2 m-1 ml-4">
                     <a href="#typography">Typography</a>
                 </li>
             </ul>
