feat: add rating component

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1158,6 +1158,44 @@
                 </article>
             </section>
 
+            <!-- rating -->
+            <section id="rating">
+                <article>
+                    <div>
+                        <h3 class="font-black my-2 text-xl">Rating</h3>
+                        <p>
+                            Rating component provide insight regarding other's opinions and experiences of a particular
+                            product. Put <code>rated</code> class to fill the rating item.
+                        </p>
+                    </div>
+
+                    <div class="snippet rounded-sm p-3 flex-column flex-center wrap my-1 border">
+                        <div class="rating">
+                            <i class="fa fa-star rating-item"></i>
+                            <i class="fa fa-star rating-item"></i>
+                            <i class="fa fa-star rating-item"></i>
+                            <i class="fa fa-star rating-item"></i>
+                            <i class="fa fa-star rating-item"></i>
+                        </div>
+
+                        <div class="rating mt-2">
+                            <i class="fa fa-star rating-item rated"></i>
+                            <i class="fa fa-star rating-item rated"></i>
+                            <i class="fa fa-star rating-item rated"></i>
+                            <i class="fa fa-star rating-item"></i>
+                            <i class="fa fa-star rating-item"></i>
+                        </div>
+                    </div>
+                    <div class="my-3 snippet">
+                        <iframe loading="lazy"
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522rating%2520mt-2%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fa%2520fa-star%2520rating-item%2520rated%2522%253E%253C%252Fi%253E%250A%2520%2520%253Ci%2520class%253D%2522fa%2520fa-star%2520rating-item%2520rated%2522%253E%253C%252Fi%253E%250A%2520%2520%253Ci%2520class%253D%2522fa%2520fa-star%2520rating-item%2520rated%2522%253E%253C%252Fi%253E%250A%2520%2520%253Ci%2520class%253D%2522fa%2520fa-star%2520rating-item%2522%253E%253C%252Fi%253E%250A%2520%2520%253Ci%2520class%253D%2522fa%2520fa-star%2520rating-item%2522%253E%253C%252Fi%253E%250A%253C%252Fdiv%253E%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509"
+                            style="height: 209px; border:0; transform: scale(1); overflow:hidden;"
+                            sandbox="allow-scripts allow-same-origin">
+                        </iframe>
+                    </div>
+                </article>
+            </section>
+
             <!-- slider -->
             <section id="slider">
                 <article>
