refactor: text utility

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1417,8 +1417,8 @@
                         <code>text-right</code>.
                     </p>
                     <div class="snippet rounded-sm p-3 my-1 border">
-                        <p class="gray text-left">This is light gray text</p>
-                        <p class="dark-gray text-center">This is dark gray text</p>
+                        <p class="text-left">This is dummy text</p>
+                        <p class="dark-gray text-center">This is dummy text</p>
                         <p class="text-right">This is dummy text</p>
                     </div>
                     <div class="my-3 snippet">
