--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1417,19 +1417,15 @@
                         <code>text-right</code>.
                     </p>
                     <div class="snippet rounded-sm p-3 my-1 border">
-                        <p class="gray text-left">This is light gray text</p>
-                        <p class="dark-gray text-center">This is dark gray text</p>
+                        <p class="text-left">This is dummy text</p>
+                        <p class="dark-gray text-center">This is dummy text</p>
                         <p class="text-right">This is dummy text</p>
                     </div>
                     <div class="my-3 snippet">
                         <iframe loading="lazy"
-                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522gray%2520text-left%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522dark-gray%2520text-center%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522text-right%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
-                            style="
-									height: 133px;
-									border: 0;
-									transform: scale(1);
-									overflow: hidden;
-								" sandbox="allow-scripts allow-same-origin">
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=sharp&l=htmlmixed&width=977&ds=false&dsyoff=20px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=136%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522text-left%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522dark-gray%2520text-center%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522text-right%2522%253EThis%2520is%2520dummy%2520text%253C%252Fp%253E%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509%2509"
+                            style="height: 133px; border:0; transform: scale(1); overflow:hidden;"
+                            sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
                 </article>
